[metadata]
name = cptopt
version = 0.1.0
author = Eric Luxenberg, Philipp Schiele, Stephen Boyd
author_email = ericlux@stanford.edu, philipp.schiele@stat.uni-muenchen.de, boyd@stanford.edu
url = https://github.com/cvxgrp/cptopt
description = Portfolio Optimization with Cumulative Prospect Theory Utility via Convex Optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0

[options]
packages = find:
install_requires =
    cvxpy >= 1.3
    numpy
    scipy
    torch
zip_safe = True
include_package_data = True

[options.extras_require]
dev = pytest

[options.package_data]
* = README.md

[flake8]
max-line-length = 100